--- a/website/style.css
+++ b/website/style.css
@@ -3,43 +3,87 @@
   margin: auto;
 }
 
-/* .container { */
-  /* display: flex; */
-  /* flex-direction: column; */
-  /* align-items: center; */
-  /* justify-content: center; */
-  /* padding: 165px 0 124px; */
-  /* width: 100%; */
-  /* margin: auto; */
-  /* border: #fbab40; */
-  /* height: 100vh; */
-  /* background-color: #242628; */
-  /* background-image: url(./assets/world.svg); */
-  /* background-repeat: no-repeat; */
-  /* background-position-x: center; */
-  /* background-position-y: 70px; */
-  /* background-origin: padding-box; */
-/* } */
+.platz {
+	position: absolute;
+	/* border: solid; */
+	/* border-width: 1px; */
+	/* border-color: cyan; */
+	height: 100px;
+	background-color: rgb(0,100,200);
+	width: 100px;
+}
 
-/* .header h3 { */
-  /* text-align: center; */
-  /* color: #ff9e40; */
-  /* font-size: 24px; */
-  /* font-style: normal; */
-  /* font-weight: 600; */
-  /* margin: 0; */
-  /* line-height: 36px; */
-/* } */
+.LR1 {
+	position: absolute;
+	top: 200px;
+	left: 20px;
+	right: 500px;
+	/* border: solid; */
+	/* border-color: orange; */
+	height: 100px;
+}
+
+.PR {
+	position: absolute;
+	top: 350px;
+	left: 20px;
+	right: 500px;
+	/* border: solid; */
+	/* border-color: orange; */
+	height: 100px;
+}
+
+.LR2 {
+	position: absolute;
+	top: 500px;
+	left: 20px;
+	right: 500px;
+	/* border: solid; */
+	/* border-color: orange; */
+	height: 100px;
+}
+
+.Leinwand {
+	position: absolute;
+	font-size: 30px;
+	top: 50px;
+	left: 100px;
+	right: 575px;
+	text-align: center;
+	border-top: solid;
+	border-radius: 90px;
+	border-width: 5px;
+	border-color: black;
+}
+
+.Reservierung {
+	position: absolute;
+	top: 50px;
+	left: 50px;
+	right: 50px;
+	bottom: 50px;
+	/* border: solid; */
+	/* border-width: 1px; */
+	/* border-color: purple; */
+}
 
 .vorstellung {
 	position: relative;
 	top: 5px;
 	left: 50px;
 	width: 1400px;
-	height: 225px;
-	border: solid;
-	border-width: 1px;
-	border-color: purple;
+	height: 231.5px;
+	/* border: solid; */
+	/* border-width: 1px; */
+	/* border-color: purple; */
+}
+
+#btn {
+	position: absolute;
+	bottom: 50px;
+	right: 300px;
+	height: 35px;
+	width: 100px;
 }
 
 #tvorstellung{
@@ -62,75 +106,9 @@
   border-bottom-width: 1px;
 }
 
-img {
+#covers {
 	position: absolute;
 	width: 150px;
 	height: 225px;
 	left: 5px;
 }
-
-/* .header > h1 { */
-  /* font-style: normal; */
-  /* font-weight: 600; */
-  /* font-size: 48px; */
-  /* line-height: 150%; */
-  /* display: flex; */
-  /* align-items: center; */
-  /* text-align: center; */
-  /* color: #ffffff; */
-/* } */
-
-/* .header > p { */
-  /* font-style: normal; */
-  /* font-weight: 400; */
-  /* font-size: 24px; */
-  /* line-height: 150%; */
-  /* text-align: center; */
-  /* color: #ffffff; */
-  /* flex-grow: 0; */
-  /* margin: 16px 0px; */
-/* } */
-
-/* .options { */
-  /* display: flex; */
-  /* flex-direction: row; */
-/* } */
-
-/* .options > a { */
-  /* color: #ffffff; */
-  /* text-decoration: underline; */
-  /* margin: 0px 8px; */
-  /* font-weight: 400; */
-  /* font-size: 24px; */
-  /* line-height: 150%; */
-/* } */
-
-/* .options > a:first-of-type { */
-  /* margin-right: 30px; */
-/* } */
-
-/* .logo { */
-  /* margin-top: 75px; */
-/* } */
-
-/* .logo > img { */
-  /* width: 160px; */
-  /* height: 64px; */
-/* } */
-
-/* .learn-more > a > button { */
-  /* background: #f6821f; */
-  /* border-radius: 4px; */
-  /* border: none; */
-  /* width: 180px; */
-  /* margin-top: 78px; */
-  /* height: 55px; */
-  /* color: #ffffff; */
-  /* text-align: center; */
-  /* font-weight: 600; */
-  /* font-size: 16px; */
-  /* line-height: 19px; */
-  /* background: rgba(246, 130, 31, 1); */
-  /* box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0.25); */
-  /* cursor: pointer; */
-/* } */
